--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amateur-typescript",
+  "name": "amateur-canvas",
   "version": "1.0.0",
-  "description": "A basic attempt of TypeScript",
+  "description": "A basic attempt of canvas",
   "private": true,
   "packageManager": "pnpm@8.15.6",
   "engines": {
@@ -14,20 +14,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/feTus9527/amateur-typescript.git"
+    "url": "https://github.com/feTus9527/amateur-canvas.git"
   },
   "license": "MIT",
   "scripts": {
     "dev": "",
-    "build": "tsc",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^8.57.1",
-    "prettier": "^3.3.3",
-    "typescript": "~5.5.0"
+    "prettier": "^3.3.3"
   }
 }
